# dask-geomodeling

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  appveyor.yml  pyproject.toml  script.py  setup.cfg  setup.py  skyview3.py
.github/workflows/: release.yml  test-conda.yaml  test.yml
dask_geomodeling/: __init__.py  config.py  ipyleaflet_plugin.py  measurements.py  settings.py  utils.py
dask_geomodeling/core/: __init__.py  graphs.py
dask_geomodeling/geometry/: __init__.py  aggregate.py  base.py  constructive.py  field_operations.py  geom_operations.py  merge.py  parallelize.py  set_operations.py  sinks.py  sources.py  text.py  writer.py
dask_geomodeling/raster/: __init__.py  base.py  combine.py  elemwise.py  misc.py  parallelize.py  reduction.py  sinks.py  sources.py  spatial.py  temporal.py
dask_geomodeling/tests/: conftest.py  factories.py  test_aggregate_raster.py  test_core.py  test_geometry.py  test_geometry_sinks.py  test_geometry_writer.py  test_measurements.py  test_raster.py  test_raster_base.py  test_raster_elemwise.py  test_raster_misc.py  test_raster_parallelize.py  test_raster_reduction.py  test_raster_sinks.py  test_raster_sources.py  test_raster_spatial.py  test_raster_temporal.py  test_utils.py
docs/: blocks.rst  conf.py  environment.yml  geometry.rst  index.rst  installation.rst  quickstart.rst  raster.rst  requirements.txt  views.rst
rfc/: 0001-dask.md
